styles/grid.css
.grid, .grid * {
    box-sizing: border-box;
}
.grid {
    border-top: 1px solid #E6E6E6;
    border-left: 1px solid #E6E6E6;
    float: left;
    position: relative;
    background-color: white;
    width: 100000px;
}
.grid__row {
    clear: left;
}
.grid__cell, .grid__header-cell {
    border-right: 1px solid #E6E6E6;
    border-bottom: 1px solid #E6E6E6;
    display: inline-block;
    float: left;
}
.grid__cell--nonselectable {
    background-color: #d9d9d9;
}
.grid__header-cell {
    background-color: #d9d9d9;
}
.grid__cell__content, .grid__header-cell__content {
    padding: 4px;
    white-space: nowrap;
    overflow: hidden;
}
.grid__active-cell {
    position: absolute;
    border: 2px solid #dedede;
}
.grid-active-cell--is-active .grid__active-cell {
    border-color: #378FFB;
}
.grid grid-input-reader {
    opacity: 0;
}
.grid grid-active-cell textarea {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    width: 100%;
}

